err/twipy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2'...
Listing './lib/python3.5/site-packages/oauth2/clients'...
Listing './lib/python3.5/site-packages/oauth2-1.9.0.post1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/twipy'...
Compiling './lib/python3.5/site-packages/twipy/adapter.py'...
***   File "./lib/python3.5/site-packages/twipy/adapter.py", line 82
    print '(%s) %s: %s' % (status.c_id, status.user.screen_name, status.text)  # pragma: no cover
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twipy/api.py'...
***   File "./lib/python3.5/site-packages/twipy/api.py", line 65
    print 'Text length has to be less than 140 characters'
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twipy/capture.py'...
***   File "./lib/python3.5/site-packages/twipy/capture.py", line 21
    print '\nUps! You\'ve pressed Ctrl+C, but it doesn\'t work here... Try with the \'q\' command to quit\n'
                                                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twipy/command.py'...
***   File "./lib/python3.5/site-packages/twipy/command.py", line 57
    print version  # pragma: no cover
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twipy/keys.py'...
***   File "./lib/python3.5/site-packages/twipy/keys.py", line 93
    print 'Visit the url to obtain the auth code:'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twipy/models.py'...
***   File "./lib/python3.5/site-packages/twipy/models.py", line 75
    print 'Error deleting tweet with id ' + status.id_str
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twipy-0.0.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
